--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 # This config file is meant for settings that affect your whole blog, values
 # which you are expected to set up once and rarely need to edit after that.
 # For technical reasons, this file is *NOT* reloaded automatically when you use
-# 'jekyll serve'. If you change this file, please restart the server process.
+# 'jekyll serve'. If you change this file, please restart the server process..
 
 # Site settings
 title: NSS Cohort 11
